create feature version
