# backend/docs/swagger.json
@@ -2574,7 +2574,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/service.VersionLinkDto"
+                                "$ref": "#/definitions/service.FeatureVersionLinkDto"
                             }
                         }
                     },
@@ -2586,6 +2586,75 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create feature version",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create feature version",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Service version ID",
+                        "name": "service_version_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Feature version ID",
+                        "name": "feature_version_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.CreateResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/echo.HTTPError"
                         }
@@ -2696,7 +2765,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/service.VersionLinkDto"
+                                "$ref": "#/definitions/service.ServiceVersionLinkDto"
                             }
                         }
                     },
@@ -3430,6 +3499,7 @@
                 "canEdit",
                 "description",
                 "id",
+                "isLastVersion",
                 "name",
                 "version"
             ],
@@ -3442,6 +3512,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "isLastVersion": {
+                    "type": "boolean"
                 },
                 "name": {
                     "type": "string"
@@ -3472,6 +3545,25 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "version": {
+                    "type": "integer"
+                }
+            }
+        },
+        "service.FeatureVersionLinkDto": {
+            "type": "object",
+            "required": [
+                "featureVersionId",
+                "serviceVersionId",
+                "version"
+            ],
+            "properties": {
+                "featureVersionId": {
+                    "type": "integer"
+                },
+                "serviceVersionId": {
+                    "type": "integer"
                 },
                 "version": {
                     "type": "integer"
@@ -3665,6 +3757,21 @@
                 }
             }
         },
+        "service.ServiceVersionLinkDto": {
+            "type": "object",
+            "required": [
+                "id",
+                "version"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "version": {
+                    "type": "integer"
+                }
+            }
+        },
         "service.ValidatorDto": {
             "type": "object",
             "required": [
@@ -3787,21 +3894,6 @@
                     "additionalProperties": {
                         "type": "string"
                     }
-                }
-            }
-        },
-        "service.VersionLinkDto": {
-            "type": "object",
-            "required": [
-                "id",
-                "version"
-            ],
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "version": {
-                    "type": "integer"
                 }
             }
         }
