# backend/handler/routes.go
@@ -30,18 +30,21 @@ func (h *Handler) RegisterRoutes(e *echo.Echo) {
 	serviceGroup.GET("/versions", h.ServiceVersions)
 	serviceGroup.POST("/versions", h.CreateServiceVersion)
 
-	featureGroup := serviceGroup.Group("/features")
-	featureGroup.GET("", h.Features)
-	featureGroup.GET("/linkable", h.LinkableFeatures)
-	featureGroup.POST("", h.CreateFeature)
-	featureGroup.GET("/:feature_version_id", h.Feature)
-	featureGroup.PUT("/:feature_version_id", h.UpdateFeature)
-	featureGroup.GET("/:feature_version_id/versions", h.FeatureVersions)
-	featureGroup.POST("/:feature_version_id/link", h.LinkFeatureVersion)
-	featureGroup.DELETE("/:feature_version_id/unlink", h.UnlinkFeatureVersion)
-	featureGroup.GET("/name-taken/:name", h.IsFeatureNameTaken)
+	featuresGroup := serviceGroup.Group("/features")
+	featuresGroup.GET("", h.Features)
+	featuresGroup.GET("/linkable", h.LinkableFeatures)
+	featuresGroup.POST("", h.CreateFeature)
+	featuresGroup.GET("/name-taken/:name", h.IsFeatureNameTaken)
 
-	keyGroup := featureGroup.Group("/:feature_version_id/keys")
+	featureGroup := featuresGroup.Group("/:feature_version_id")
+	featureGroup.GET("", h.Feature)
+	featureGroup.PUT("", h.UpdateFeature)
+	featureGroup.GET("/versions", h.FeatureVersions)
+	featureGroup.POST("/versions", h.CreateFeatureVersion)
+	featureGroup.POST("/link", h.LinkFeatureVersion)
+	featureGroup.DELETE("/unlink", h.UnlinkFeatureVersion)
+
+	keyGroup := featureGroup.Group("/keys")
 	keyGroup.GET("", h.Keys)
 	keyGroup.GET("/create", h.CreateKey)
 	keyGroup.POST("", h.CreateKey)
